--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@rainbow-me/rainbowkit": "^2.2.8",
     "@tabler/icons-react": "^3.34.1",
+    "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "create-eth": "^1.0.3",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
@@ -39,6 +42,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
+    "viem": "^2.36.0",
+    "wagmi": "^2.16.8",
     "zod": "^4.1.4"
   },
   "devDependencies": {
