--- a/package.json
+++ b/package.json
@@ -9,10 +9,6 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/modifiers": "^9.0.0",
-    "@dnd-kit/sortable": "^10.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -30,11 +26,10 @@
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-query": "^5.85.5",
-    "@tanstack/react-table": "^8.21.3",
+    "@wagmi/core": "^2.20.2",
     "abitype": "^1.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "create-eth": "^1.0.3",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
@@ -50,19 +45,13 @@
     "usehooks-ts": "^3.1.1",
     "vaul": "^1.1.2",
     "viem": "^2.36.0",
-    "wagmi": "^2.16.8",
-    "zod": "^3.25.76"
+    "wagmi": "^2.16.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.2",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.7",
     "typescript": "^5"
   }
 }
