--- a/package.json
+++ b/package.json
@@ -25,33 +25,38 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@tabler/icons-react": "^3.34.1",
-    "@tanstack/react-query": "^5.85.5",
-    "@wagmi/core": "^2.20.2",
-    "abitype": "^1.0.9",
+    "@tanstack/react-query": "^5.87.1",
+    "@wagmi/core": "^2.20.3",
+    "abitype": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.542.0",
-    "next": "15.5.2",
+    "lucide-react": "^0.543.0",
+    "next": "^15.5.2",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-spinners": "^0.17.0",
-    "recharts": "^2.15.4",
+    "recharts": "^3.2.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "type-fest": "^4.41.0",
     "usehooks-ts": "^3.1.1",
     "vaul": "^1.1.2",
-    "viem": "^2.36.0",
-    "wagmi": "^2.16.8"
+    "viem": "^2.37.5",
+    "wagmi": "^2.16.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@types/node": "24.3.1",
     "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@types/react-dom": "^19.1.9",
+    "eslint": "^9.35.0",
+    "eslint-config-next": "^15.5.2",
+    "tailwindcss": "^4.1.13",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   }
 }
